# CSC581_GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Ground_Rules.docx  README.md  README_TEST.md  SetupEngine.ps1  launch_bare_server.sh  launch_client.sh  launch_server.sh  main.cpp  run_demo.ps1  stresstest_client.sh  stresstest_server.sh
.github/workflows/: cmake-multi-platform.yml
GameEngine/: CMakeLists.txt  README.md  main.cpp
Milestone_and_Issue_Generator/: Project Tasks for Milestone 1_ Build the Game Engine Foundations.docx  issues_data_M1.json  milestone1.json
demo_cs/: client_main.cpp  main.h  server_main.cpp
docs/: Authority_vs_Decentralized_P2P_Comparison.md  docs.milestone1.md
engine/: CMakeLists.txt  main.cpp  mainloop.cpp
engine/core/: .gitkeep  Application.cpp  Application.hpp  IGame.hpp  Input.hpp  Window.cpp  Window.hpp  memory.cpp
engine/entity/: .gitkeep  entity.cpp
engine/render/: .gitkeep  Renderer.cpp  Renderer.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture.cpp  Texture.hpp  renderer.cpp  sprite.cpp  spriteManager.cpp
engine/utils/: AssetManager.cpp  AssetManager.hpp
game/: CMakeLists.txt  ExampleGame.cpp  ExampleGame.hpp  main.cpp  main.h
include/: engine.hpp  entity.hpp  memory.hpp  renderer.hpp  sprite.hpp  spriteManager.hpp  window.hpp
net/server_simple/: CMakeLists.txt
net/server_simple/src/: main.cpp
scripts/: convertpng2bmp.py
scripts/Milestone_and_Issue_Generator/: README.md  create_github_issues.py  issues_data_M1.json  milestone1.json
src/: Collisions.cpp  Collisions.h  Config.h  Entity.h  EntityManager.cpp  GameClient.cpp  GameClient.h  GameEngine.cpp  GameEngine.h  GameServer.cpp  GameServer.h  Input.cpp  Input.h  JobSystem.cpp  JobSystem.h  P2PHandler.h  P2P_main.cpp  P2P_main.h  Physics.cpp  Physics.h  PlayerEntity.h  Render.cpp  Render.h  SharedData.h  Timeline.h  client_main.cpp  main.cpp  main.h  packetdef.h  server_main.cpp  tracker_main.cpp  vec2.cpp  vec2.h
src/Collision/: Collisions.cpp  Collisions.h
src/Core/: GameEngine.cpp  GameEngine.h  Render.cpp  Render.h  SharedData.h
src/Entities/: Entity.h  EntityManager.cpp
src/Events/: EventSystem.h  EventTypes.h  InputEvent.h  ReplayEvent.h
src/Input/: Input.cpp  Input.h
src/Math/: vec2.cpp
src/Memory/: MemoryPool.cpp  MemoryPool.h
src/Networking/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  P2PHandler.cpp  P2PHandler.h  P2P_main.cpp  client_main.cpp  server_main.cpp
src/Networking/p2p/: P2PNode.cpp  P2PNode.h  P2PTracker.cpp
src/Networking_SC/: GameClient.cpp  GameServer.cpp
src/Physics/: Physics.cpp  Physics.h
src/Replay/: ReplayEvent.h  ReplaySystem.cpp  ReplaySystem.h
src/Timeline/: Timeline.h
src/client/: Client.cpp  Client.h
src/engine_client/: Client.cpp  Client.h
src/engine_server/: Server.cpp  Server.h
src/game/: ClientMain.cpp  ServerMain.cpp  mapdef.h
src/netdemo/: NetClient.cpp  NetClient.hpp  main_net.cpp
src/p2p/: P2PNode.cpp  P2PNode.h  P2PTracker.cpp  P2PTracker.h  tracker_main.cpp
src/p2pPongDemo/: PongDemo.cpp  PongDemo.h  p2p_pong_demo_main.cpp
src/p2pPongDemoV2/: PongDemoV2.cpp  PongDemoV2.h  p2p_pong_demo_v2_main.cpp
src/p2p_v2/: P2PNodeV2.cpp  P2PNodeV2.h  P2PTrackerV2.cpp  P2PTrackerV2.h  tracker_v2_main.cpp
src/server/: Server.cpp  Server.h
testing/: client_main.cpp  csmain.h  server_main.cpp
